# opendata

./: .gitignore  .pypi-upload-config  =0.30.0  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_RESULTS.md  CODE_REVIEW_SUMMARY.md  CONTEXT_GUIDELINES.md  FINAL_SUMMARY.md  Metadane_dane badawcze.xlsx  README.md  REVIEW_NICEGUI_FIX.md  REVIEW_SUMMARY.md  RODBUK.md  RODBUK_informacje.docx  SUPPORTED_PLATFORMS.md  TESTING_ANALYSIS.md  build.py  build_binary.py  build_dist.py  consolidated_review.md  debug_auth.py  debug_token.py  fix_dialog_logic.py  index.html  log  pr_comments.json  pyproject.toml  review_1.md  review_2.md  review_consolidated.md  run_remote_preview.py  test_match.py  test_openai_endpoint.py  test_v1_oauth.py  test_v2_oauth.py  test_v2_oauth_fixed.py  test_walk.py  (+1 more)
.github/: copilot-instructions.md
.github/workflows/: .main.yml.swp  build-linux.yml  build-windows-macos.yml  build.yml  deploy-pages.yml  main.yml  pyapp-build-binary.yml  release.yml  reusable-build-binary.yml  reusable-test-gui.yml  reusable-test-logic.yml  reusable-verify-binary.yml  test-gui.yml  test-linux-binary.yml  test-unit.yml
.github/workflows/reusable/: build-binary.yml  test-gui.yml  test-logic.yml  verify-binary.yml
DOCS/: IMPLEMENTATION_PLAN.md
docs/: ACCOMPLISHMENTS.md  AI_DEVELOPMENT_ROADMAP.md  BINARY_SYSTEM.md  BUILDING.md  BUILD_SYSTEM_FIX_SUMMARY.md  DEVELOPER_MANUAL.md  DOCUMENTATION_INDEX.md  PROMPT_ARCHITECTURE.md  ROADMAP.md  SESSION_HANDOFF_v0.22.39.md  SUPPORTED_PLATFORMS.md  TESTER_MANUAL.md  TESTING.md  TESTING_INFRASTRUCTURE.md  TESTING_INSTRUCTIONS.md
docs/dev/: ACCOMPLISHMENTS.md  API.md  FIELD_PROTOCOL_DECOUPLING.md  MULTIPROCESSING_ARCHITECTURE.md  TEST_RESULTS.md  development_plan.md
example/: Comments.md  OpenData.yaml  ReadMe.md
example/analysis/: OpenData.yaml
example/data/: OpenData.yaml
example/paper/: OpenData.yaml
migration_test/: verify_migration.py
pyapp/: README.md  config.toml
pyinstaller_hooks/: hook-gi.py
scripts/: generate_spec.py  validate-workflows.sh  wait-for-ci.sh
src/opendata/: VERSION  anchor.py  exceptions.py  main.py  models.py  packager.py  utils.py  workspace.py
src/opendata/agents/: ai_heuristics.py  engine.py  learning.py  parsing.py  persistence.py  project_agent.py  scanner.py  tools.py
src/opendata/ai/: base.py  genai_provider.py  google_provider.py  openai_provider.py  service.py  telemetry.py
src/opendata/api/: __init__.py  projects.py
src/opendata/extractors/: base.py  citations.py  docx.py  hierarchical.py  latex.py  medical.py  physics.py
src/opendata/i18n/: translator.py
src/opendata/i18n/pl/LC_MESSAGES/: messages.po
src/opendata/packaging/: manager.py
src/opendata/prompts/: chat_wrapper.md  full_text_extraction.md  system_prompt.md  system_prompt_curator.md  system_prompt_metadata.md
src/opendata/protocols/: manager.py
src/opendata/protocols/fields/: physics.yaml
src/opendata/storage/: project_db.py
src/opendata/ui/: app.py  context.py  state.py
src/opendata/ui/components/: __init__.py  bug_report_dialog.py  chat.py  file_picker.py  files_dialog.py  header.py  inventory_logic.py  metadata.py  model_dialog.py  package.py  preview.py  protocols.py  settings.py
tests/: conftest.py  run_all_tests.sh  run_e2e_tests.sh  start_app_for_tests.sh  stop_app_for_tests.sh  test_agent_callback.py  test_build_script.py  test_full_text_extraction.py  test_main.py  test_packager.py  test_safety.py  test_utils.py  test_wheel_packaging.py  test_workspace.py
tests/e2e/: conftest.py  debug_field_protocol.py  test_api_workflow.py  test_field_protocol_bug_backend.py  test_field_protocol_bug_regression.py  test_gui_field_protocol.py  test_simple_gui.py
tests/end_to_end/: test_full_workflow.py
tests/fixtures/: realistic_metadata.yaml
tests/fixtures/chemistry_project/data/spectra/: FTIR_MOF_IFJ_1.csv
tests/fixtures/chemistry_project/manuscript/: draft.md
tests/fixtures/demo_project/: INCAR  POSCAR
tests/fixtures/demo_project/paper/: main.tex
tests/fixtures/physics_project/data/: INCAR  POSCAR
tests/fixtures/physics_project/paper/: citations.bib  manuscript.tex
tests/fixtures/physics_project/phonopy/: phonopy.yaml
tests/fixtures/physics_project/scripts/: plot_phonons.py
tests/fixtures/realistic_projects/3C-SiC/: OpenData.yaml  ReadMe.md  main.tex
tests/fixtures/realistic_projects/FeSi/: FeSi_ProjectMetadata.yaml  OpenData.yaml  ReadMe.md  main.tex
tests/integration/: test_file_management_dialog.py  test_realistic_projects.py  test_workspace_io.py
tests/unit/: test_pyapp_workflow.py
tests/unit/agents/: test_agent_integration.py  test_agent_logic.py  test_engine.py  test_field_protocol_persistence.py  test_manual_file_selection.py  test_parsing.py  test_parsing_correctness.py  test_parsing_realistic.py  test_parsing_robustness.py  test_parsing_yaml.py  test_project_agent.py  test_significant_files_persistence.py  test_workspace_deletion.py
tests/unit/ai/: test_genai_provider.py  test_model_validation.py  test_telemetry.py
tests/unit/models/: test_models.py
tests/unit/protocols/: test_protocol_manager.py
tests/unit/ui/: test_chat_ai_cancel_state.py  test_chat_scan_message.py  test_chat_welcome_persistence.py  test_files_dialog_component.py  test_header_bug_report_button.py  test_metadata_empty_fields.py  test_model_dialog_component.py  test_model_selection_dialog.py  test_package_stats.py  test_package_toggle.py  test_settings_ui_safety.py  test_significant_files_refresh.py
tests/unit/workspace/: test_workspace.py
website/: index.html
website/docs/: AI_SETUP.md  DEBUGGING_AND_ISSUE_HANDLING.md  DEVELOPER_MANUAL.md  DOCUMENTATION_INDEX.md  SESSION_HANDOFF_v0.22.39.md  TASK_PYPI_SECRETS.md  TESTER_MANUAL.md  TESTING.md  developer.md  installation.md  installation_pl.md  tester.md
website/docs/dev/: AI_REFACTORING.md  API.md  FIELD_PROTOCOL_DECOUPLING.md  PROMPT_ARCHITECTURE.md  ROADMAP.md  TEST_INFRASTRUCTURE.md  TEST_RESULTS.md
