[project]
name = "opendata-tool"
dynamic = ["version", "readme"]
description = "Scientific metadata preparation and packaging tool"
authors = [
    {name = "Antigravity", email = "antigravity@example.com"}
]
license = {text = "MIT"}
keywords = [
    "scientific-data",
    "metadata",
    "research",
    "RODBUK",
    "data-management",
    "open-science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "nicegui>=1.4.0",
    "pydantic[email]>=2.0.0",
    "pyyaml>=6.0.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
    "python-docx>=1.1.0",
    "pypandoc>=1.13",
    "pydicom>=2.4.0",
    "bibtexparser>=1.4.0",
    "h5py>=3.10.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "json-repair>=0.30.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://jochym.github.io/opendata/"
Documentation = "https://jochym.github.io/opendata/"
Repository = "https://github.com/jochym/opendata"
Changelog = "https://github.com/jochym/opendata/blob/main/CHANGELOG.md"

[project.scripts]
opendata = "opendata.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = "src/opendata/VERSION"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"opendata" = ["prompts/*.md", "ui/**/*", "VERSION", "*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"

# Markers for test categorization
markers = [
    "ai_interaction: Tests that use AI services (local only, not in CI/CD)",
    "local_only: Tests that require local environment (not in CI/CD)",
    "e2e: End-to-end tests",
    "unit: Unit tests",
    "integration: Integration tests",
]

# Default: exclude AI interaction tests (for CI/CD safety)
# For local dev with AI: use 'pytest -m ""' to run ALL tests
addopts = "-m 'not ai_interaction and not local_only'"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "ARG", "ERA", "PL"]
ignore = []
